# DataSience

./: .gitignore  HWDS2.1.ipynb  HWDS2.2.ipynb  HWDS2.3.ipynb  HWDS3.1.ipynb  HWDS4.ipynb  HWDS5.ipynb  Untitled.ipynb  aggregated_data.csv  pyproject.toml
.ipynb_checkpoints/: HWDSM1-checkpoint.ipynb
HWDS10/: HWDS10.ipynb
HWDS11/: HWDS11.ipynb
HWDS12/: HWDS12.ipynb
HWDS6.1/: HWDS6.ipynb
HWDS7/: HWDS7.ipynb
HWDS8/: HWDS8.ipynb
HWDS9/: HWDS9.ipynb
