[tool.poetry]
name = "datasience"
version = "0.1.0"
description = ""
authors = ["Sikan777 <sikanbog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
scikit-surprise = "^1.1.3"
tensorflow = "^2.16.1"
pylance = "^0.10.18"
keras = "^3.3.3"
nltk = "^3.8.1"
spacy = "^3.7.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
